--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,7 +20,7 @@
             android:id="@+id/action_settingsFragment_to_aboutFragment"
             app:destination="@id/aboutFragment" />
         <argument
-            android:name="plays"
+            android:name="PLAYS_KEY"
             app:argType="integer"
             android:defaultValue="0" />
     </fragment>
@@ -40,7 +40,7 @@
         android:label="fragment_statistics"
         tools:layout="@layout/fragment_statistics" >
         <argument
-            android:name="plays"
+            android:name="PLAYS_KEY"
             app:argType="integer"
             android:defaultValue="0" />
     </fragment>
