--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -20,7 +20,7 @@
         android:id="@+id/statsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/profile_statistics"
+        android:text="@string/statistics"
         android:padding="20dp"/>
 
     <Button
